@@ -282,7 +282,7 @@
 
 <addon id="script.lrclyrics"
        name="LRC Lyrics"
-       version="1.4.0"
+       version="1.4.1"
        provider-name="Taxigps">
   <requires>
     <import addon="xbmc.python" version="1.0"/>
