@@ -1,4 +1,7 @@
-﻿[B]1.4.0 (2012.01.14)[/B]
+﻿[B]1.4.1 (2012.01.14)[/B]
+changed to not use xbmc.getInfoLabel
+
+[B]1.4.0 (2012.01.14)[/B]
 initialized into eden
 
 [B]1.3.4 (2012.01.03)[/B]
